# fp

./: Cargo.toml  LICENSE  README.md
src/: app.rs  cli.rs  event.rs  handler.rs  lib.rs  main.rs  project.rs  sorter.rs  theme.rs  tui.rs  ui.rs  widgets.rs
src/app/: state.rs
src/theme/: variant.rs
src/ui/: preview.rs  projects_list.rs  searchbar.rs
src/widgets/: preview.rs  searchbar.rs
