[package]
name = "fp"
version = "0.1.0"
authors = ["Valentin271"]
license = "MIT"
edition = "2021"
description = "A small project switcher"

[dependencies]
argh = "0.1.12"
crossterm = "0.28.0"
globwalk = "0.9.1"
lscolors = { version = "0.19.0", default-features = false, features = ["crossterm"] }
ratatui = { version = "0.27.0", default-features = false, features = ["crossterm"] }

[profile.release]
lto = true
strip = true
opt-level = 3
